--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ p{
 .media{
     font-size: 30px;
     font-weight: 200px;
+    padding-top: 70px;
 }
 .flower-5{
     display: flex;
@@ -163,8 +164,11 @@ p{
     background-image: url('image/Rectangle\ 9.png');
     background-repeat: no-repeat;
     height: 200px;
-    padding: 30px;
+    background-size: cover;
+    width: 1340px;
+    padding: 50px 0px;
     border-radius: 2px;
+    margin: auto;
     
 }
 input{
@@ -182,4 +186,29 @@ input{
     color: aliceblue;
     border-style: none;
 }
+#color{
+    color: #E55473;
+}
+.footer-section{
+    background-color: #272727;
+    height: 150px;
+    color: #fff;
+    font-size: 25px;
+    text-align: center;;
+    margin: 100px 0 0;
+    padding: 58px 170px;
+    width: 1170px;
+    
+}
+.footer-section  p{
+    color: #ffffff;
+    width: 500px;
+    margin: auto;
 
+}
+
+.footer-section .copy-section{
+    color: #ffffff54;
+    margin-top: 30px;
+    
+}
