--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    padding: 0px;
+}
 .container{
     display: flex;
     background: rgba(229, 84, 115, 0.10);
@@ -20,6 +23,7 @@ h3{
     font-size: 80px;
     font-style: normal;
     font-weight: 800;
+    margin-bottom: 35px;
 }
 p{
     color: rgba(39, 39, 39, 0.60);
@@ -33,6 +37,7 @@ p{
     background: #E55473;
     color: aliceblue;
     border-style: none;
+    margin-bottom: 34px;
 }
 .text-description{
     color: #272727;
@@ -101,7 +106,8 @@ p{
     font-size: 18px;
     justify-content: space-around;
     margin: auto;
-    height: 200px;
+    height: 320px;
+    width: 1143px;
 
     
     
@@ -113,7 +119,6 @@ p{
     font-size: 30px;
     align-items: center;
     width: 600px;
-    /* margin: auto; */
     background-size: auto;
     padding: 70px;
 
@@ -121,7 +126,7 @@ p{
 }
 .flower-4{
     display: flex;
-    height: 250px;
+    height: 320px;
     justify-content: center;
     
 }
@@ -138,11 +143,13 @@ p{
     margin: auto;
     padding: 0px 100px;
     align-items: center;
+    
 }
 .media{
     font-size: 30px;
     font-weight: 200px;
     padding-top: 70px;
+    margin-bottom: ;
 }
 .flower-5{
     display: flex;
@@ -163,7 +170,7 @@ p{
     background-repeat: no-repeat;
     height: 200px;
     background-size: cover;
-    width: 1340px;
+    width: 1370px;
     padding: 50px 0px;
     border-radius: 2px;
     margin: auto;
@@ -195,7 +202,7 @@ input{
     text-align: center;;
     margin: 100px 0 0;
     padding: 58px 170px;
-    width: 1170px;
+    width: 1145px;
     
 }
 .footer-section  p{
